# PawPassv1

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
frontend_password_manager/tauri-app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend_password_manager/tauri-app/src/: App.css  App.tsx
frontend_password_manager/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
frontend_password_manager/tauri-app/src-tauri/icons/: icon.icns
frontend_password_manager/tauri-app/src-tauri/src/: main.rs
frontend_password_manager/tauri-app/src/components/: ChangeMasterPasswordForm.tsx  DashboardForm.tsx  LoginForm.tsx  MasterPasswordSetupForm.tsx  PasswordEntryForm.tsx
frontend_password_manager/tauri-app/src/hooks/: useSession.ts
frontend_password_manager/tauri-app/src/pages/: ChangeMasterPasswordPage.tsx  DashboardPage.tsx  LoginPage.tsx  MasterPasswordSetupPage.tsx  PasswordEntryPage.tsx
frontend_password_manager/tauri-app/src/utils/: api.ts
password_manager_backend/: Cargo.toml
password_manager_backend/src/: config.rs  crypto.rs  error_handling.rs  lib.rs  master_password.rs  mek.rs  password_entry.rs  storage.rs
